[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/SynergyIcons_Big/SynIcon_Border_Black_Big.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/SynergyIcons_Big/SynIcon_Dom_Red_30x30.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Subs/SynergyIcon/SynergyIcon.gd" type="Script" id=3]

[node name="SynergyIcon" type="MarginContainer"]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Icon" type="TextureRect" parent="."]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 2.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 28.0
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 1 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 30.0
margin_bottom = 2.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 28.0
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 1 )
stretch_mode = 2
